# soccer-vit-linebreak

./: .gitignore  README.md  pyproject.toml
configs/: compare_linecorridor.yaml  compare_smoke_linecorridor.yaml  default.yaml  default_linecorridor.yaml  seed_sweep_linecorridor.yaml  seed_sweep_smoke_linecorridor.yaml  smoke.yaml  vit_eval_quick.yaml  vit_mid.yaml  vit_mid_corridor_only.yaml  vit_mid_line_only.yaml  vit_mid_linecorridor.yaml  vit_mid_linecorridor_no_passer.yaml  vit_mid_no_ball.yaml  vit_mid_no_receiver.yaml  vit_smoke.yaml
notebooks/: colab_vit_linebreak_smoke.ipynb
scripts/: run_vit_cluster.sh
src/soccer_vit/: __init__.py  data_pipeline.py  eval.py  experiments.py  input_channels.py  metrics.py  report.py  train.py  utils.py
src/soccer_vit/labeling/: __init__.py  linebreak.py
src/soccer_vit/metrica/: __init__.py  align.py  download.py  io.py  normalize.py
src/soccer_vit/models/: __init__.py  baselines.py  cnn.py  explain_cnn.py  explain_vit.py  vit.py
src/soccer_vit/raster/: __init__.py  augment.py  render.py
tests/: test_linebreak_label.py  test_normalize.py
